--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
@@ -1,12 +1,15 @@
 <script>
-   // ############## USER CONFIGURATION START ##############
-   // Auto flip to back when One by one mode.
-   var autoflip = false 
+// ############## USER CONFIGURATION START ##############
+// Auto flip to back when One by one mode.
+var autoflip = false 
 
-   // ##############  TAG SHORTCUT  ##############
-   var toggleTagsShortcut = "C";
+// ##############  TAG SHORTCUT  ##############
+var toggleTagsShortcut = "C";
 
-    // ############## USER CONFIGURATION END ##############
+// ENTER THE TAG TERM WHICH, WHEN PRESENT, WILL TRIGGER A RED BACKGROUND
+var tagID = "XXXYYYZZZ"
+
+// ############## USER CONFIGURATION END ##############
 </script>
 
 <!-- CLOZE ONE BY ONE AUTOFLIP -->
