Change quotes in AnkingOverhaul template

--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -11,7 +11,7 @@ var ButtonShortcuts = {
     "Pixorize" : "Alt + 7",
     "Physeo" : "Alt + 8",
     "OME" : "Alt + F1",
-    "Additional Resources" : 'Alt + 9',
+    "Additional Resources" : "Alt + 9",
 }
 var ToggleAllButtonsShortcut = "'"
 
