--- a/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
@@ -25,7 +25,7 @@ var toggleTagsShortcut = "C";
 // ENTER THE TAG TERM WHICH, WHEN PRESENT, WILL TRIGGER A RED BACKGROUND
 var tagID = "XXXYYYZZZ"
 
-// ~~~~~~~~~~~~~  CLOZE ONE BY ONE  ~~~~~~~~~~~~~
+// ##############  CLOZE ONE BY ONE  ##############
 var revealNextShortcut = "N" 
 var revealNextWordShortcut = "Shift + N"
 var toggleAllShortcut = ","
