--- a/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
@@ -25,7 +25,7 @@ var toggleTagsShortcut = "C";
 // ENTER THE TAG TERM WHICH, WHEN PRESENT, WILL TRIGGER A RED BACKGROUND
 var tagID = "XXXYYYZZZ"
 
-// ~~~~~~~~~~~~~  CLOZE ONE BY ONE  ~~~~~~~~~~~~~
+// ##############  CLOZE ONE BY ONE  ##############
 var revealNextShortcut = "N" 
 var revealNextWordShortcut = "Shift + N"
 var toggleAllShortcut = ","
@@ -127,6 +127,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
   <div id="additional" class="hints" style="display: none;">{{edit:Additional Resources}}</div>
 </span>
 {{/Additional Resources}}
+
 
 <!-- ANKING HYPERLINK IMAGE -->
 <a href="https://www.ankingmed.com"><img src="_AnKingRound.png" alt="The AnKing" id="pic"></a>
