--- a/src/anking_notetypes/note_types/AnKing/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKing/Back Template.html
@@ -228,6 +228,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
   .cloze[data-content]:hover {
     cursor: pointer;
   }
+  .cloze[data-hint] {
+    color: #009400 !important;
+  }
 </style>
 
 <script>
@@ -250,6 +253,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
       }
       elem.innerHTML = elem.dataset.content
       delete elem.dataset.content
+      delete elem.dataset.hint
     }
 
     const revealClozeWord = function(elem) {
@@ -268,6 +272,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
           let temp = document.createElement("div");
           temp.innerHTML = elem.dataset.hidden;
           elem.innerHTML = elem.dataset.revealed + " " + clozeHider(temp);
+          delete elem.dataset.hint
         }
       } else {
         let temp = document.createElement("div");
@@ -301,6 +306,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
         cloze.dataset.content = cloze.innerHTML
         if(window.clozeHints && window.clozeHints[count]) {
           cloze.innerHTML = window.clozeHints[count]
+          cloze.dataset.hint = true
         } else {
           cloze.innerHTML = clozeHider(cloze)
         }
