Add resources to collection when importing notetype

--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -187,7 +187,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ome" class="hintBtn" data-name="OME">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ome')"></a>
   <button id="button-ome" class="button-general" onclick="toggleHintBtn('hint-ome')">
-    <img src="_Anking_v3.png"> OME
+    <img src="_omelogo.icon.png"> OME
   </button>
   <div id="ome" class="hints" style="display: none;">{{edit:OME}}</div>
 </span>
