--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -182,10 +182,10 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 </span>
 {{/Physeo}}
 
-<!-- OME FIELD -->
+<!-- OME FIELD (only shows on mobile)-->
 {{#OME}}
 <span id = "hint-ome" class="hintBtn" data-name="OME">
-  <a href="#" class="hint" onclick="toggleHintBtn('hint-ome')"></a>
+  <a onclick="toggleHintBtn('hint-ome')"></a>
   <button id="button-ome" class="button-general" onclick="toggleHintBtn('hint-ome')">
     <img src="_omelogo.icon.png"> OME
   </button>
