--- a/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
@@ -107,11 +107,21 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-pixorize" class="hintBtn" data-name="Pixorize">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
   <button id="button-pixorize" class="button-general" onclick="toggleHintBtn('hint-pixorize')">
-    <img src="_Anking_v3.png"> Pixorize
+    <img src="_pixorize.png"> Pixorize
   </button>
   <div id="pixorize" class="hints" style="display: none;">{{edit:Pixorize}}</div>
 </span>
 {{/Pixorize}}
+
+{{#Sketchy}}
+<span id = "hint-sketchy" class="hintBtn" data-name="Sketchy">
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
+  <button id="button-sketchy" class="button-general" onclick="toggleHintBtn('hint-sketchy')">
+    <img src="_sketchy.icon.png"> Sketchy
+  </button>
+  <div id="sketchy" class="hints" style="display: none;">{{edit:Sketchy}}</div>
+</span>
+{{/Sketchy}}
 
 {{#Additional Resources}}
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
