--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
@@ -9,6 +9,10 @@ var toggleTagsShortcut = "C";
 // ENTER THE TAG TERM WHICH, WHEN PRESENT, WILL TRIGGER A RED BACKGROUND
 var tagID = "XXXYYYZZZ"
 
+// WHETHER THE WHOLE TAG OR ONLY THE LAST PART SHOULD BE SHOWN
+
+var showOnlyLastPartOfTag = false;
+
 // ############## USER CONFIGURATION END ##############
 </script>
 
