--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -37,6 +37,10 @@ var toggleTagsShortcut = "C";
 // ENTER THE TAG TERM WHICH, WHEN PRESENT, WILL TRIGGER A RED BACKGROUND
 var tagID = "XXXYYYZZZ"
 
+// WHETHER THE WHOLE TAG OR ONLY THE LAST PART SHOULD BE SHOWN
+
+var showOnlyLastPartOfTag = false;
+
 // ##############  CLOZE ONE BY ONE  ##############
 var revealNextShortcut = "N" 
 var revealNextWordShortcut = "Shift + N"
@@ -488,7 +492,11 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
     for (var i = 0; i < tagList.length; i++) {
       var newTag = document.createElement("kbd");
-      newTag.innerHTML = tagList[i];
+      var tag = tagList[i];
+      if(showOnlyLastPartOfTag){
+        tag = tag.split('::').slice(-1)[0];
+      }
+      newTag.innerHTML = tag;
       newTagContent.append(newTag)
     }
     tagContainer.innerHTML = newTagContent.innerHTML;
