--- a/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
@@ -24,7 +24,7 @@ var tagID = "XXXYYYZZZ"
 
 // WHETHER THE WHOLE TAG OR ONLY THE LAST PART SHOULD BE SHOWN
 
-var showOnlyLastPartOfTag = false;
+var numTagLevelsToShow = 0;
 
 // ##############  CLOZE ONE BY ONE  ##############
 var revealNextShortcut = "N" 
@@ -393,8 +393,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
     for (var i = 0; i < tagList.length; i++) {
       var newTag = document.createElement("kbd");
       var tag = tagList[i];
-      if(showOnlyLastPartOfTag){
-        tag = tag.split('::').slice(-1)[0];
+      // numTagLevelsToShow == 0 means the whole tag should be shown
+      if(numTagLevelsToShow != 0){
+        tag = tag.split('::').slice(-numTagLevelsToShow).join("::");
       }
       newTag.innerHTML = tag;
       newTagContent.append(newTag)
