--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
@@ -1,3 +1,4 @@
+<!-- version 83778d3 -->
 <script>
 // ############## USER CONFIGURATION START ##############
 // Auto flip to back when One by one mode.
@@ -11,7 +12,7 @@ var tagID = "XXXYYYZZZ"
 
 // WHETHER THE WHOLE TAG OR ONLY THE LAST PART SHOULD BE SHOWN
 
-var showOnlyLastPartOfTag = false;
+var numTagLevelsToShow = 0;
 
 // ############## USER CONFIGURATION END ##############
 </script>
