Update note types

--- a/src/anking_notetypes/note_types/AnKing/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKing/Back Template.html
@@ -102,9 +102,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 {{/Missed Questions}}
 
 <!-- Extra field -->
-<p></p>{{#Extra}}
+{{#Extra}}<p></p>
 <div id="extra">{{edit:Extra}}</div>
-{{/Extra}}<br>
+<br>{{/Extra}}
 
 
 <!-- ANKING HYPERLINK IMAGE -->
