--- a/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
@@ -108,9 +108,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 {{/Missed Questions}}
 
 <!-- Extra field -->
-<p></p>{{#Extra}}
-    <div id="extra">{{edit:Extra}}</div>
-{{/Extra}}<br>
+{{#Extra}}<p></p>
+<div id="extra">{{edit:Extra}}</div>
+<br>{{/Extra}}
 
 {{#Textbook}}
 <span id = "hint-tx" class="hintBtn" data-name="Textbook">
