--- a/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
@@ -102,10 +102,10 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 </span>
 {{/Missed Questions}}
 
-<!-- EXTRA FIELD -->
-<p></p>{{#Extra}}
+<!-- Extra field -->
+{{#Extra}}<p></p>
 <div id="extra">{{edit:Extra}}</div>
-{{/Extra}}<br>
+<br>{{/Extra}}
 
 {{#Pixorize}}
 <span id = "hint-pixorize" class="hintBtn" data-name="Pixorize">
