--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -142,9 +142,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 
 <!-- Extra field -->
-<p></p>{{#Extra}}
+{{#Extra}}<p></p>
 <div id="extra">{{edit:Extra}}</div>
-{{/Extra}}<br>
+<br>{{/Extra}}
 
 {{#First Aid}}
 <span id = "hint-fa" class="hintBtn" data-name="First Aid">
