--- a/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
@@ -101,9 +101,9 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 <br></br>
 <!-- Extra field -->
-<p></p>{{#Extra}}
+{{#Extra}}<p></p>
 <div id="extra">{{edit:Extra}}</div>
-{{/Extra}}<br>
+<br>{{/Extra}}
 
 {{#Images}}<div id="imagefield">{{edit:Images}}</div>{{/Images}}
 
