--- a/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
+++ b/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
@@ -7,7 +7,7 @@ var ButtonShortcuts = {
 }
 
 var ToggleAllButtonsShortcut = "'"
-
+var ToggleNextButtonShortcut = "H";
 // ##############  SHOW HINTS AUTOMATICALLY  ##############
 var ButtonAutoReveal = {
   "Personal Notes": false,
@@ -49,7 +49,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <!-- BUTTON FIELDS -->
 {{#Personal Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
-  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_Anking_v3.png"> Personal Notes
   </button>
@@ -59,7 +59,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_Anking_v3.png"> Missed Questions
   </button>
@@ -162,6 +162,31 @@ replace the arrows/dashes from the statement below with double curly brackets-->
           link.style.display = ""
         }
       }
+
+      window.toggleNextButton = function(){
+        // adapted from Hint Hotkey add-on
+        var customEvent = document.createEvent('MouseEvents');
+        customEvent.initEvent('click', false, true);
+        var arr = document.getElementsByTagName('a');
+        for (var i=0; i<arr.length; i++) {
+          var el = arr[i];
+          if (el.style.display === 'none') {
+            continue;
+          }
+          if (el.classList.contains("hint")) {
+            el.dispatchEvent(customEvent);
+            break
+          }
+        }
+      }
+        
+      const isToggleNextShortcut = shortcutMatcher(ToggleNextButtonShortcut)
+      ankingAddEventListener("keydown", (evt) => {
+        if (evt.repeat) return
+        if (isToggleNextShortcut(evt)) {
+          toggleNextButton()
+        }
+      })
     
       const setupHintBtn = function(elem) {
         const containerId = elem.id
