Update note types

--- a/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
@@ -89,7 +89,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Personal Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_Anking_v3.png"> Personal Notes
   </button>
@@ -99,7 +99,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_Anking_v3.png"> Missed Questions
   </button>
@@ -114,7 +114,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Textbook}}
 <span id = "hint-tx" class="hintBtn" data-name="Textbook">
-  <a class="hint" onclick="toggleHintBtn('hint-tx')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-tx')"></a>
   <button id="button-tx" class="button-general" onclick="toggleHintBtn('hint-tx')">
     <img src="_dermki.png"> Textbook
   </button>
@@ -124,7 +124,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Additional Resources}}
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
-  <a class="hint" onclick="toggleHintBtn('hint-ar')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
     <img src="_dermki.png"> Additional Resources
   </button>
