--- a/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
@@ -84,7 +84,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Lecture Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Lecture Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_Anking_v3.png"> Lecture Notes
   </button>
@@ -94,7 +94,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_Anking_v3.png"> Missed Questions
   </button>
@@ -109,7 +109,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Pixorize}}
 <span id = "hint-pixorize" class="hintBtn" data-name="Pixorize">
-  <a class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
   <button id="button-pixorize" class="button-general" onclick="toggleHintBtn('hint-pixorize')">
     <img src="_pixorize.png"> Pixorize
   </button>
@@ -119,7 +119,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Sketchy}}
 <span id = "hint-sketchy" class="hintBtn" data-name="Sketchy">
-  <a class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
   <button id="button-sketchy" class="button-general" onclick="toggleHintBtn('hint-sketchy')">
     <img src="_sketchy.icon.png"> Sketchy
   </button>
@@ -129,7 +129,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Additional Resources}}
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
-  <a class="hint" onclick="toggleHintBtn('hint-ar')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
     <img src="_Anking_v3.png"> Additional Resources
   </button>
