--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -102,7 +102,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <!-- BUTTON FIELDS -->
 {{#Lecture Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Lecture Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_Anking_v3.png"> Lecture Notes
   </button>
@@ -112,7 +112,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_Anking_v3.png"> Missed Questions
   </button>
@@ -122,7 +122,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Pathoma}}
 <span id = "hint-pat" class="hintBtn" data-name="Pathoma">
-  <a class="hint" onclick="toggleHintBtn('hint-pat')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-pat')"></a>
   <button id="button-pat" class="button-general" onclick="toggleHintBtn('hint-pat')">
     <img src="_pathoma.icon.png"> 
   </button>
@@ -132,7 +132,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Boards and Beyond}}
 <span id = "hint-bb" class="hintBtn" data-name="Boards and Beyond">
-  <a class="hint" onclick="toggleHintBtn('hint-bb')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-bb')"></a>
   <button id="button-bb" class="button-general" onclick="toggleHintBtn('hint-bb')">
     <img src="_b&b.icon.png"> Boards and Beyond
   </button>
@@ -148,7 +148,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#First Aid}}
 <span id = "hint-fa" class="hintBtn" data-name="First Aid">
-  <a class="hint" onclick="toggleHintBtn('hint-fa')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-fa')"></a>
   <button id="button-fa" class="button-general" onclick="toggleHintBtn('hint-fa')">
     <img src="_first-aid.icon_v2.1.png"> First Aid
   </button>
@@ -158,7 +158,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Sketchy}}
 <span id = "hint-sketchy" class="hintBtn" data-name="Sketchy">
-  <a class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
   <button id="button-sketchy" class="button-general" onclick="toggleHintBtn('hint-sketchy')">
     <img src="_sketchy.icon.png"> Sketchy
   </button>
@@ -168,7 +168,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Pixorize}}
 <span id = "hint-pixorize" class="hintBtn" data-name="Pixorize">
-  <a class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
   <button id="button-pixorize" class="button-general" onclick="toggleHintBtn('hint-pixorize')">
     <img src="_pixorize.png"> Pixorize
   </button>
@@ -178,7 +178,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Physeo}}
 <span id = "hint-physeo" class="hintBtn" data-name="Physeo">
-  <a class="hint" onclick="toggleHintBtn('hint-physeo')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-physeo')"></a>
   <button id="button-physeo" class="button-general" onclick="toggleHintBtn('hint-physeo')">
     <img src="_physeologo.icon.png"> 
   </button>
@@ -199,7 +199,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Additional Resources}}
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
-  <a class="hint" onclick="toggleHintBtn('hint-ar')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
     <img src="_Anking_v3.png"> Additional Resources
   </button>
