--- a/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
+++ b/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
@@ -49,7 +49,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <!-- BUTTON FIELDS -->
 {{#Personal Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_Anking_v3.png"> Personal Notes
   </button>
@@ -59,7 +59,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_Anking_v3.png"> Missed Questions
   </button>
