--- a/src/anking_notetypes/note_types/Basic-AnKingLanguage/Back Template.html
+++ b/src/anking_notetypes/note_types/Basic-AnKingLanguage/Back Template.html
@@ -51,7 +51,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <!-- BUTTON FIELDS -->
 {{#Definitions}}
 <span id = "hint-df" class="hintBtn" data-name="Definitions">
-  <a class="hint" onclick="toggleHintBtn('hint-df')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-df')"></a>
   <button id="button-df" class="button-general" onclick="toggleHintBtn('hint-df')">
     <img src="_Anking_v3.png"> Definitions
   </button>
@@ -61,7 +61,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Examples}}
 <span id = "hint-exp" class="hintBtn" data-name="Examples">
-  <a class="hint" onclick="toggleHintBtn('hint-exp')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-exp')"></a>
   <button id="button-exp" class="button-general" onclick="toggleHintBtn('hint-exp')">
     <img src="_Anking_v3.png"> Examples
   </button>
@@ -71,7 +71,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Alternative Translations}}
 <span id = "hint-alt" class="hintBtn" data-name="Alternative Translations">
-  <a class="hint" onclick="toggleHintBtn('hint-alt')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-alt')"></a>
   <button id="button-alt" class="button-general" onclick="toggleHintBtn('hint-alt')">
     <img src="_Anking_v3.png"> Alternative Translations
   </button>
