--- a/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
@@ -81,7 +81,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Personal Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_PhyseoRoundSmall.png"> Personal Notes
   </button>
@@ -91,7 +91,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_PhyseoRoundSmall.png"> Missed Questions
   </button>
