--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
@@ -48,7 +48,7 @@ var numTagLevelsToShow = 0;
 <!-- TOGGLE HINT BUTTONS -->
 {{#Extra}}
 <span id = "hint-ex" class="hintBtn" data-name="Extra">
-  <a class="hint" onclick="toggleHintBtn('hint-ex')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ex')"></a>
   <button id="button-ex" class="button-general" onclick="toggleHintBtn('hint-ex')">
     <img src="_PhyseoRoundSmall.png"> Extra
   </button>
@@ -58,7 +58,7 @@ var numTagLevelsToShow = 0;
 
 {{#Personal Notes}}
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
-  <a class="hint" onclick="toggleHintBtn('hint-ln')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
     <img src="_PhyseoRoundSmall.png"> Personal Notes
   </button>
@@ -68,7 +68,7 @@ var numTagLevelsToShow = 0;
 
 {{#Missed Questions}}
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
-  <a class="hint" onclick="toggleHintBtn('hint-mq')"></a>
+  <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
     <img src="_PhyseoRoundSmall.png"> Missed Questions
   </button>
