Update note types (fix sketchy field)

--- a/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Back Template.html
@@ -5,7 +5,8 @@ var ButtonShortcuts = {
     "Lecture Notes" : "Alt + 1",
     "Missed Questions" : "Alt + 2",
     "Pixorize" : "Alt + 3",
-    "Additional Resources" : "Alt + 4",
+    "Sketchy" : "Alt + 4",
+    "Additional Resources" : "Alt + 5",
 }
 var ToggleAllButtonsShortcut = "'" // '
 var ToggleNextButtonShortcut = "H";
@@ -14,6 +15,7 @@ var ButtonAutoReveal = {
     "Lecture Notes": false,
     "Missed Questions": false,
     "Pixorize": false,
+    "Sketchy": false,
     "Additional Resources": false,
 }
 
