--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
@@ -45,6 +45,12 @@ var numTagLevelsToShow = 0;
 <br>
 <div class="btn-spacer" hidden></div>
 
+<!-- AUTOFLIP BACK SCRIPT -->
+<script>
+    // autoflip hides card in front template
+    document.getElementById("qa").style.removeProperty("display")
+</script>
+
 <!-- TOGGLE HINT BUTTONS -->
 {{#Extra}}
 <span id = "hint-ex" class="hintBtn" data-name="Extra">
