--- a/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Back Template.html
@@ -265,6 +265,12 @@ replace the arrows/dashes from the statement below with double curly brackets-->
     })()
     </script>
 
+<!-- AUTOFLIP BACK SCRIPT -->
+<script>
+    // autoflip hides card in front template
+    document.getElementById("qa").style.removeProperty("display")
+</script>
+
 <!-- CLOZE ONE BY ONE SCRIPT -->
 <style>
   .cloze[data-content]:hover {
@@ -397,8 +403,6 @@ replace the arrows/dashes from the statement below with double curly brackets-->
       } catch {}
     }
     
-    // autoflip hides card in front template
-    document.getElementById("qa").style.removeProperty("display")
     hideAllCloze(initial=true)
 
     let isShowNextShortcut = shortcutMatcher(window.revealNextShortcut)
