--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Front Template.html
@@ -1,4 +1,4 @@
-<!-- version 47c1c17 -->
+<!-- version 9dabbeb -->
 <script>
 // ############## USER CONFIGURATION START ##############
 // Auto flip to back when One by one mode.
@@ -17,38 +17,20 @@ var numTagLevelsToShow = 0;
 // ############## USER CONFIGURATION END ##############
 </script>
 
-
-<!-- CLOZE ONE BY ONE AUTOFLIP -->
-<div id="one-by-one" style="display: none;">{{One by one}}</div>
-
+<!-- AUTO FLIP FRONT -->
 <script>
-  var clozeOneByOneEnabled = true;
-  
-  window.clozeHints = [];
-  if (clozeOneByOneEnabled) {
-    // Save cloze hints to display in the back
-    let clozes = document.getElementsByClassName("cloze")
-    for(var i = 0; i < clozes.length; i++) {
-      if (clozes[i].innerHTML === "[...]") {
-        window.clozeHints.push("")
-      } else {
-        window.clozeHints.push(clozes[i].innerHTML)
-      }
-    }
+   if (autoflip) {
+    // avoid flickering. Must unset this in the back.
+    document.getElementById("qa").style.display = "none";
 
-    if(autoflip) {
-      // avoid flickering. Must unset this in the back.
-      document.getElementById("qa").style.display = "none";
-
-      if (window.pycmd) {
+    if (window.pycmd) {
         pycmd("ans")
-      } else if (window.showAnswer) {
+    } else if (window.showAnswer) {
         showAnswer()
-      }    
-      // AnkiMobile JS API doesn't have one for show answer. 
-      // Best alternative is to use Taps/Swipes to show answer.
     }
-  }
+}
+// AnkiMobile JS API doesn't have one for show answer.
+// Best alternative is to use Taps/Swipes to show answer.
 </script>
 
 {{#I0}}
