Support AnkiMobile user actions

--- a/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
+++ b/src/anking_notetypes/note_types/Basic-AnKing/Back Template.html
@@ -465,3 +465,15 @@ replace the arrows/dashes from the statement below with double curly brackets-->
   var mustClickW = true;
   //END CUSTOMIZATION
 </script>
+
+<!-- ANKIMOBILE USER ACTIONS -->
+<script>
+var userJs1 = undefined
+var userJs2 = undefined
+var userJs3 = undefined
+var userJs4 = undefined
+var userJs5 = undefined
+var userJs6 = undefined
+var userJs7 = undefined
+var userJs8 = undefined
+</script>
