--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Back Template.html
@@ -440,3 +440,15 @@ var numTagLevelsToShow = 0;
   }
 </script>
 </div>
+
+<!-- ANKIMOBILE USER ACTIONS -->
+<script>
+var userJs1 = undefined
+var userJs2 = undefined
+var userJs3 = undefined
+var userJs4 = undefined
+var userJs5 = undefined
+var userJs6 = undefined
+var userJs7 = undefined
+var userJs8 = undefined
+</script>
