--- a/ankiweb_description.html
+++ b/ankiweb_description.html
@@ -1,15 +1,63 @@
-<b>This add-on was funded by the Anki Palace. Please consider supporting our work using the links below so we can continue to fund add-on projects like this.</b>
+This add-on allows easy customization of the AnKing Note Types. You can download the note types with the add-on if they're not already in your collection and you can track changes for the note types on their <a href="https://github.com/AnKingMed/AnKing-Note-Types" rel="nofollow">GitHub page</a> (NOTE: There is a <a href="https://github.com/AnKingMed/AnKing-Note-Types" rel="nofollow">Github page for the Note Types</a> and a separate <a href="https://github.com/AnKingMed/anking_notes_addon" rel="nofollow">Github page for this add-on</a>).  <b>This add-on currently only works on 2.1.36+</b>
 
-<b>Screenshots</b>
-<img src="https://raw.githubusercontent.com/ankipalace/export-tag/master/screenshots/dialog.png?raw=content">
+<b>How to use this add-on and the note types:</b>
+<a href="https://youtu.be/NYUhNMyAZNs" rel="nofollow">This video</a> goes over how to use everything in the note types and the add-on. This is probably the best tutorial.
+If you prefer written instructions, use <a href="https://github.com/AnKingMed/AnKing-Note-Types" rel="nofollow">this README</a> on GitHub.
+
+The config can be accessed via the menu AnKing-&gt;AnKing Note Types or in the note type editor there is a "Configure AnKing Note Types" button on the bottom left
+
+If you don't have the note types installed, you can install them via the add-on or you can install example notes on the <a href="https://github.com/AnKingMed/AnKing-Note-Types/releases" rel="nofollow">Note Types Github releases page</a>
+
+
+<b>Images:</b>
+Add-on:
+<img src="https://raw.githubusercontent.com/AnKingMed/anking_notes_addon/master/screenshots/Addon%20config.jpg?raw=true">
+
+IO one by one note type:
+<img src="https://raw.githubusercontent.com/AnKingMed/AnKing-Note-Types/master/screenshots/IO%20one%20by%20one.gif?raw=true">
+
+Cloze one by one feature (built in to most note types):
+<img src="https://raw.githubusercontent.com/AnKingMed/AnKing-Note-Types/master/screenshots/Cloze-one%20by%20one.gif?raw=true">
+
+
+<b>Thank you</b>
+Huge thank you to @BlueGreenMagick, @Kleinerpirat, @RisingOrange, u/Ankiphil, and u/holythesea who have helped significantly with the development of these notes over the last few years
 
 <b>Problems, Bugs, Errors, Improvements</b>
-If you find a serious bug, please submit it on <a href="https://github.com/ankipalace/export-tag/issues" rel="nofollow">Github</a> or email us at ankingmed@gmail.com. Please remember that we are not coders and thus may not be able to provide support.
+If you find a serious bug with the add-on, please submit it on <a href="https://github.com/AnKingMed/anking_notes_addon" rel="nofollow">Github</a> or email us at ankingmed@gmail.com. If you find any issues with the note types, please submit them on this <a href="https://github.com/AnKingMed/AnKing-Note-Types" rel="nofollow">github page</a>. Please remember that we are not coders and thus may not be able to provide support.
 
 <b>Changelog</b>
-08-20-2021: Initial Release
+2021-12-24: Initial Release (Merry Christmas and Happy Holidays!:)
+2021-12-28: Added 2.1.50 compatibility, including PyQt6
+2022-01-08: Fixed bug with checkboxes and added backwards compatibility to 2.1.36
+2022-01-16: Fixed another bug with checkboxes
+2022-01-30: Fixed a few bugs and added new note types. Added a new feature that allows for only seeing a certain number of levels of hierarchical tags. Moved Button order to Fields section and now includes all fields (even if they aren't a button). Now will not scroll to auto-revealed hints.
+2022-02-08: Few bug fixes. Added new feature to allow for customizing what button is used to open each button one at a time. Hint Hotkeys add-on is no longer needed
+2022-02-16: Fixed bugs with a couple of options not saving and an error that appeared for some Mac users when updating the note types
+2022-02-25: Fixed occasional crash when importing a collection file
+2022-03-29: Updated note types. Renamed Button Order to Field Order and moved it into the Fields section.
+2022-07-12: Now also updates AnkiHub-versions of the AnKing note types, as well as copies of the AnKing note types that have names like for example "AnKingOverhaul-7ra5q" (sometimes created by Anki when importing a deck).
+2022-07-14: Added option to convert note types like for example. "AnKingOverhaul-7ra5q" to "AnKingOverhaul" respectively. It is shown when opening the "AnKing Note Types" window when there are such note types in the collection.
+2022-07-22: Fixed a bug that was making Edit Field During Review Cloze incompatible with the IO-one by one note type. If you're still having problems, make sure to uncheck "One by one" in the Edit Field During Review Cloze config.    (This caused a bug so we temporarily rolled it back, working on a fix)
+2022-07-23: Fixed bug in IO-one by one note types.
+2022-07-25: Fixed error when reordering fields.
+2022-07-29: Fixed conflict with ReColor add-on and IO one by one notes
+2022-07-31: Added message about AnkiHub note type versions.
+2022-09-05: Updated the IO-one by one note types with the latest closet version (should fix some bugs)
+2022-10-13: Fixed problems with creating notes that use a IO-one by one note type
+2022-11-12: Adds auto direction for right to left languages and adds new styling for tables on the AnKingOverhaul note type
+2022-11-15: Add styling for tables on mobile in the AnKingOverhaul note type, made Extra field not appear until Cloze one by one toggles are all open and made it so the AMBOSS add-on can recognize words on Cloze one by one notes
+2022-11:21: Fix problem related to updates of AnkiHub note type versions
+2023-02-22: Fixed a bug in the IO one by one note type. Added ability to connect note type functions with the new AnkiMobile User Actions so you can use gamepads to interact with the notes
+2023-03-19: Fixed a formatting problem related to lists.
+2023-04-03: Updated the AnKingDerm note type. Reveal the Extra field and other auto reveal fields only after all one by one boxes have been toggled open.
+2023-04-06: Updates to the AnKingDerm note type. Added new Sketchy-Cloze note type
+2023-04-17: Update image width/height settings on the AnKingOverhaul note type
+2023-04-22: Updated the table styling for all note types (thanks to connwork!)
+2023-04-24: Now supports auto-revealing hint buttons on individual notes based on tags. Add tag "autoopen::Field_name" with _ in place of spaces
+2023-04-27: Now the note type update notification is also shown if you only have the AnkiHub version of a note type installed. Fixed tabs getting out of order in the config window.
 
-<b>Please consider checking out our:</b>
+Please consider checking out our:
 <a href="https://www.youtube.com/theanking/playlists" rel="nofollow">YouTube Channel</a>- <i>How to use Anki for beginners and advanced users.</i>
 <a href="https://www.instagram.com/ankingmed" rel="nofollow">Instagram</a>/<a href="https://www.facebook.com/ankingmed" rel="nofollow">Facebook</a>: <i>@Ankingmed</i>
 <a href="https://www.ankingmed.com" rel="nofollow">www.AnKingMed.com</a>- <i>Recommended add-ons, tutorials and more including <b>how to download 40+ add-ons in &lt; 5min</b></i>
@@ -20,7 +68,6 @@ If you find a serious bug, please submit it on <a href="https://github.com/ankip
 
 <a href="https://www.ankipalace.com/membership" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/Patreon.jpg?raw=true"></a>
 
-<b>      Check out our Anki Mastery Course!
-    (The source of funding for this project)</b>
-          <a href="https://courses.ankipalace.com/?utm_source=anking_bg_add-on&amp;utm_medium=anki_add-on_page&amp;utm_campaign=mastery_course" rel="nofollow">https://courses.ankipalace.com</a>
+<b>      Check out our Anki Mastery Course!</b>
+<a href="https://courses.ankipalace.com/?utm_source=anking_bg_add-on&amp;utm_medium=anki_add-on_page&amp;utm_campaign=mastery_course" rel="nofollow">          https://courses.ankipalace.com</a>
 <a href="https://courses.ankipalace.com/?utm_source=anking_bg_add-on&amp;utm_medium=anki_add-on_page&amp;utm_campaign=mastery_course" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/AnkiPalace.png?raw=true"></a>
